Add VIEW_ADMIN_PANEL authority and refactor DummyDataLoader